# websoft9

./: .gitignore  .kilocodemodes  CHANGELOG.md  CI_QUICKSTART.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  bmadhelp.md  catalog_zh-CN.json  changelog_latest.md  cookies.txt  docker-installer.sh  mirrors.json  package-lock.json  version.json
apphub/: .flake8  .gitignore  README.md  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_config.py
apphub/apidocs/: README.md  index.html  openapi.json
apphub/docs/: architecture.md  plugin-developer.md  user.md
apphub/logs/: apphub.log.2026-05-29  apphub.log.2026-06-02  apphub.log.2026-06-16  apphub_error.log.2026-04-22
apphub/src/: files_agent.py  main.py  media.py  update_media.py
apphub/src/apphub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
apphub/src/cli/: apphub_cli.py
apphub/src/config/: config.ini  product_metadata.json  system.ini
apphub/src/core/: apiHelper.py  api_key_auth.py  config.py  envHelper.py  logger.py  product_catalog.py  request_auth.py  runtime_paths.py
apphub/src/data/: wphosting.json
apphub/tests/: README.md  test_app_access_manager.py  test_app_compose_install.py  test_app_manager_media_sync.py  test_app_manager_stack_state.py  test_app_status.py  test_apphub_cli_upgrade.py  test_apps_stream_cache.py  test_appstore_sync_manager_versions.py  test_backup_restore.py  test_basic.py  test_core_services.py  test_file_manager.py  test_files_agent.py  test_git_manager.py  test_host_access.py  test_integration_credentials.py  test_integrations.py  test_overview.py  test_portainer_manager.py  test_product_auth.py  test_product_metadata.py  test_runtime_config_paths.py  test_runtime_install.py  test_runtime_logs.py  test_settings_internal_product_edition.py
(+3220 files in other folders)
